Bug 1642343 - Fix Mac themed focus outline to not show white edges. r=mstange, a=jcristau

This can be reproduced trivially on a MacBook on the test page with
layout.css.devPixelsPerPx = 1.

I wanted to fix this independently of following the outline radius.

Differential Revision: https://phabricator.services.mozilla.com/D77943